# rag-knowledge-base

./: .env.example  .gitignore  README.md  docker-compose.yml  pyrightconfig.json
backend/: .dockerignore  .env.example  Dockerfile  config.py  constants.py  exceptions.py  pyproject.toml  pyrightconfig.json  services.py
backend/api/: __init__.py  main.py
backend/api/routes/: chat.py  feedback.py  ingest.py
backend/chain/: __init__.py  prompts.py  rag.py
backend/ingestor/: __init__.py  dispatcher.py  docx.py  pdf.py  pipeline.py  url.py  validation.py  youtube.py
backend/models/: schemas.py
backend/retriever/: __init__.py  guardrails.py  search.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Chat.tsx  CitationChip.tsx  Message.tsx  Providers.tsx  Sidebar.tsx
frontend/components/ui/: input.tsx  textarea.tsx
frontend/hooks/: types.ts  use-file-ingest.ts  use-ingested-sources.ts  use-message-feedback.ts  use-streaming-chat.ts  use-url-ingest-capability.ts  use-url-ingest.ts
frontend/lib/: api.ts  constants.ts  utils.ts
