[project]
name = "rag-knowledge-base"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "pydantic",
    "pydantic-settings",
    "langchain",
    "langchain-openai",
    "langchain-qdrant",
    "langchain-cohere",
    "langchain-community",
    "openai",
    "qdrant-client",
    "cohere",
    "pymupdf",
    "python-docx",
    "youtube-transcript-api",
    "beautifulsoup4",
    "httpx",
    "python-dotenv",
    "langsmith",
]

[tool.uv]
package = false
