[project]
name = "rag-knowledge-base"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "pydantic",
    "pydantic-settings",
    "langchain",
    "langchain-openai",
    "langchain-qdrant",
    "langchain-cohere",
    "langchain-community",
    "openai",
    "qdrant-client",
    "cohere",
    "pymupdf",
    "pypdf",
    "docx2txt",
    "python-docx",
    "youtube-transcript-api",
    "beautifulsoup4",
    "httpx",
    "python-dotenv",
    "langsmith",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle errors, pyflakes, isort

[tool.ruff.format]
quote-style = "double"